# as-we-may-think

./: README.md  pubspec.yaml
.kiro/specs/note-linking/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/as_we_may_think/: MainActivity.kt
backend/: aswm_backend.db  llm_assistant.py  main.py  pyproject.toml  test_main.py
descriptions/: local_llm_assistant.md  main.md  note_linking_with_database.md  simple_note_linking.md
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart
lib/api/: api_service.dart
lib/screens/: llm_assistant_screen.dart  main_screen.dart  notes_screen.dart  rss_screen.dart
lib/state/: app_state.dart
lib/widgets/: link_text.dart  note_link_editor.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
